Fix matrix borders (#1588)
* All screen sizes → bottom border and no top border

* border-top already set to 0

* border-top already set to 0

* border-top should be and is already set to 0

* Separate &:last-child styling

* Last item always has no bottom border

* Restyle last row of matrix

Looks fine if matrix has 9 or 8 items. Looks bad otherwise.

* Annotate for clarity

* Annotate for clarity

* 1st and 2nd columns last row → no bottom border

* Annotate for clarity

* One selector per line

* Modify to showcase fixed styling

* Add heading to 9-item matrix example

* Create selector for 1st column

* Create selector for 2nd column

* Reorganize classes

* Item in 1st column of last row → no bottom border

* Item in 2nd column of last row → no bottom border

* Remove unused classes

* Remove unused class

* Revert "Add heading to 9-item matrix example"

This reverts commit 5d47c0884abd66af8f3296cb041075184af2cc5b.

* Revert "Modify to showcase fixed styling"

This reverts commit 2264b966f995ced8cb001526d17c0b394142c3a2.

--- a/scss/_patterns_matrix.scss
+++ b/scss/_patterns_matrix.scss
@@ -14,7 +14,8 @@
 
     &__item {
       @extend %clearfix;
-      border-top: 1px dotted $color-mid-dark;
+      border-bottom: 1px dotted $color-mid-dark;
+      border-top: 0;
       display: flex;
       flex-direction: row;
       margin-top: 0;
@@ -24,13 +25,8 @@
         display: none; // hide orphans
       }
 
-      &:first-child {
-        border-top: 0;
-      }
-
       @media (min-width: $breakpoint-small) { // 3 items per row
         border-right: 1px dotted $color-mid-dark;
-        border-top: 1px dotted $color-mid-dark;
         margin-bottom: 0;
         padding: $sp-medium;
         width: 33.333%;
@@ -40,25 +36,28 @@
         }
 
         &:first-child,
-        &:nth-child(3n+1) {
+        &:nth-child(3n+1) { // 1st column
           padding-left: 0;
         }
 
-        &:last-child,
-        &:nth-child(3n) {
-          padding-right: 0;
+        &:last-child {
+          border-bottom: 0;
         }
 
-        &:nth-child(-n+3) {
-          border-top: 0;
+        &:nth-child(3n+1) { // 1st column
+          &:nth-last-child(2),
+          &:nth-last-child(3) {
+            border-bottom: 0;
+          }
         }
 
-        &:nth-child(2n) {
-          border-right: 1px dotted $color-mid-dark;
-          padding-right: $sp-medium;
+        &:nth-child(3n+2) { // 2nd column
+          &:nth-last-child(2) {
+            border-bottom: 0;
+          }
         }
 
-        &:nth-child(3n) {
+        &:nth-child(3n) { // 3rd column
           border-right: 0;
           padding-right: 0;
         }
